# rl-snake

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
agent/: __init__.py  astar_agent.py  base_agent.py  cycle_agent.py  dqn_agent.py  dqn_agents.py  hamiltonian_cycle_agent.py  q_learning_agent.py  random_agent.py  sarsa_agent.py
docs/: dqn_agent.md  q_learning_agent.md
environment/: __init__.py  snake_env.py
scripts/: evaluate.py  evaluate_q_learning_agent.py  generate_combined_gif.py  generate_gif.py  performance.py  train.py  train_q_learning_agent.py
