[project]
name = "rl-snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
