[project]
name = "rl-snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.20.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.2",
    "rich>=14.2.0",
    "selenium>=4.38.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
